--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_cache_manager: ^3.3.1
   flutter_wallpaper_manager: ^0.0.4
   fluttertoast: ^8.2.2
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
